tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00009.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00009.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    store %3, %1, align 4
    %4 = load %1 : s32i, align 4
    %5 = const 10 : s32i
    %6 = mul %4, %5 : s32i [nsw]
    store %6, %1, align 4
    %7 = load %1 : s32i, align 4
    %8 = const 2 : s32i
    %9 = div %7, %8 : s32i
    store %9, %1, align 4
    %10 = load %1 : s32i, align 4
    %11 = const 3 : s32i
    %12 = rem %10, %11 : s32i
    store %12, %1, align 4
    %13 = load %1 : s32i, align 4
    %14 = const 2 : s32i
    %15 = sub %13, %14 : s32i [nsw]
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
