tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00012.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00012.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 2 : s32i
    %3 = const 2 : s32i
    %4 = add %2, %3 : s32i [nsw]
    %5 = const 2 : s32i
    %6 = mul %4, %5 : s32i [nsw]
    %7 = const 8 : s32i
    %8 = sub %6, %7 : s32i [nsw]
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
